# aetheris-iui

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  package-lock.json  package.json
application/: CMakeLists.txt
application/include/aetheris/application/: intent_engine.hpp  runtime_descriptor.hpp
application/src/: application_anchor.cpp
bench/: CMakeLists.txt  core_smoke_bench.cpp
bindings/node/: index.mjs
bindings/node/tests/: smoke.test.mjs
bindings/python/aetheris_iui/: __init__.py  client.py
bindings/python/tests/: test_smoke.py
cmake/: AetherisCompilerOptions.cmake  AetherisTesting.cmake
conan/profiles/: debug  release
docs/adr/: 0000-template.md  0001-cpp23-conan-clean-architecture.md  0002-error-model-expected.md  0003-strong-domain-primitives.md  0004-action-schema-as-central-contract.md  0005-hash-chain-instead-of-per-record-signature.md  0006-capability-binding-as-llm-isolation.md  0007-state-machine-as-explicit-entity.md  0008-baseline-without-vector-search.md  0009-two-level-intent-classification.md  0010-client-exchange-protocol.md  0011-sdk-bindings-evaluation.md
docs/architecture/: domain-foundation.md  layers.md
docs/spec/: action-schema-v0.md  action-schema.schema.json  reference-action-schemas.json
domain/: CMakeLists.txt
domain/include/aetheris/domain/: action_schema.hpp  audit.hpp  capability.hpp  concepts.hpp  error.hpp  identifier.hpp  intent.hpp  knowledge.hpp  knowledge_orchestrator.hpp  non_empty_vector.hpp  quantity.hpp  result.hpp  safety.hpp  schema_registry.hpp  session.hpp  tagged.hpp  validation_pipeline.hpp
domain/include/aetheris/domain/ports/: audit_exporter_port.hpp  audit_sink_port.hpp  budget_controller_port.hpp  clock_port.hpp  dry_run_port.hpp  embeddings_port.hpp  id_generator_port.hpp  intent_classifier_port.hpp  knowledge_source_port.hpp  llm_backend_port.hpp  rate_limiter_port.hpp  session_repository_port.hpp  slot_extractor_port.hpp  telemetry_port.hpp  vector_index_port.hpp
domain/src/: domain_anchor.cpp
eval/: runner.py
eval/datasets/: golden.jsonl
infrastructure/: CMakeLists.txt
infrastructure/include/aetheris/infrastructure/: action_schema_json.hpp  audit_chain.hpp  file_audit_sink.hpp  glossary_knowledge_source.hpp  in_memory_budget_controller.hpp  in_memory_rate_limiter.hpp  in_memory_session_repository.hpp  in_memory_vector_index.hpp  json_lines_exporter.hpp  llm_intent_classifier.hpp  memory_audit_sink.hpp  noop_telemetry.hpp  null_embeddings.hpp  prompt_builder.hpp  schema_knowledge_source.hpp  schema_slot_extractor.hpp  session_json.hpp  sha256.hpp  stub_llm_backend.hpp  system_clock.hpp  uuid_generator.hpp  vector_knowledge_source.hpp
infrastructure/src/: action_schema_json.cpp  audit_chain.cpp  file_audit_sink.cpp  json_lines_exporter.cpp  llm_intent_classifier.cpp  memory_audit_sink.cpp  noop_telemetry.cpp  schema_slot_extractor.cpp  session_json.cpp  sha256.cpp  system_clock.cpp  uuid_generator.cpp
interface/: CMakeLists.txt
interface/include/aetheris/interface/: c_api.h  session_snapshot.hpp
interface/src/: c_api.cpp  session_snapshot.cpp  stdio_server.cpp
tests/: CMakeLists.txt
tests/application/: intent_classifier_test.cpp  intent_engine_test.cpp
tests/domain/: action_schema_test.cpp  audit_test.cpp  capability_test.cpp  concepts_test.cpp  error_test.cpp  identifier_test.cpp  knowledge_orchestrator_test.cpp  non_empty_vector_test.cpp  quantity_test.cpp  safety_test.cpp  schema_registry_test.cpp  session_lifecycle_test.cpp  session_test.cpp  tagged_test.cpp  validation_pipeline_test.cpp
tests/fuzz/: action_schema_fuzz.cpp
tests/infrastructure/: action_schema_json_test.cpp  audit_chain_test.cpp  default_ports_test.cpp  json_lines_exporter_test.cpp  knowledge_sources_test.cpp  rate_limiter_test.cpp  session_json_test.cpp  session_repository_test.cpp
tests/property/: action_schema_property_test.cpp  audit_chain_property_test.cpp  capability_property_test.cpp  identifier_property_test.cpp  intent_property_test.cpp  knowledge_property_test.cpp  session_property_test.cpp
tests/smoke/: abi_stability_test.cpp  smoke_test.cpp
tests/support/: knowledge_source_contracts.hpp  llm_backend_contracts.hpp  port_contracts.hpp  schema_test_helpers.hpp  session_repository_contracts.hpp
tools/: CMakeLists.txt  aetheris_cli.cpp  audit_verify.cpp  install-git-hooks.sh  run-format.sh  run-static-analysis.sh  schema_lint.cpp
